fix exalt modal overflow

--- a/Synergism.css
+++ b/Synergism.css
@@ -5499,7 +5499,7 @@ img#singularityPerksIcon {
 .singularityChallengeAllRewards {
     display: grid;
     grid-template-rows: repeat(2, auto);
-    grid-template-columns: repeat(2, 375px);
+    grid-template-columns: repeat(2, minmax(0, 375px));
     justify-content: center;
     grid-gap: 10px;
 }
